# ruff-cgx

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff_cgx.py  template.py
.github/workflows/: ci.yml
ruff_cgx/: __init__.py  __main__.py  formatter.py  linter.py  template_formatter.py  utils.py
tests/: test_basic.py  test_formatter.py  test_formatter_api.py  test_formatter_cli.py  test_formatter_template.py  test_inline_script.py  test_linter.py  test_linter_cli.py  test_utils.py
tests/data/: lint.cgx  no_template.cgx  no_template_elaborate.cgx  simple.cgx  simple_formatted.cgx  template.cgx
