[tool.poetry]
name = "ruff-cgx"
version = "0.1.0"
description = "Ruff flinter and formatter for collagraph single-file components"
authors = ["Berend Klein Haneveld <berendkleinhaneveld@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ruff_cgx"}]

[tool.poetry.dependencies]
python = "^3.9"
collagraph = ">=0.7.0"
ruff = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[tool.ruff.lint]
select = [
    "E4",
    "E5",
    "E7",
    "E9",
    "F",   # Pyflakes (default)
    "I",   # isort imports
    "N",   # pep8-naming
    "T10", # flake8-debugger
    "T20", # flake8-print
    "RUF", # ruff
]
unfixable = [
    "F401",  # Unused import
    "F841",  # Unused variable
]

[tool.poetry.scripts]
ruff-cgx = "ruff_cgx.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
