[project]
name = "ruff-cgx"
version = "0.2.0"
description = "Ruff linter and formatter for collagraph single-file components"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "collagraph>=0.8.0",
    "ruff"
]
authors = [
    { name = "Berend Klein Haneveld", email = "berendkleinhaneveld@gmail.com" }
]
license = "MIT"

[project.scripts]
ruff-cgx = "ruff_cgx.__main__:main"

[dependency-groups]
dev = [
    "pytest",
]
ruff = [
    "ruff"
]

[tool.uv]
package = true

[tool.ruff.lint]
select = [
    "E4",
    "E5",
    "E7",
    "E9",
    "F",   # Pyflakes (default)
    "I",   # isort imports
    "N",   # pep8-naming
    "T10", # flake8-debugger
    "T20", # flake8-print
    "RUF", # ruff
    "ARG", # flake8-unused-arguments
]
unfixable = [
    "F401",  # Unused import
    "F841",  # Unused variable
]
